--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ APP_DEBUG=true
 APP_KEY=base64:S5snurcKrBn62SVSeNmdZ+mQnIn8uSr4rJkKdX/uDcs=
 
 DB_CONNECTION=sqlsrv
-DB_HOST=DESKTOP-PRIUVVU
+DB_HOST= DESKTOP-N4TOFBT\HUONGVU
 DB_PORT=
 DB_DATABASE=giahue
 DB_USERNAME=sa
