--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ APP_KEY=base64:S5snurcKrBn62SVSeNmdZ+mQnIn8uSr4rJkKdX/uDcs=
 DB_CONNECTION=sqlsrv
 DB_HOST= DESKTOP-N4TOFBT\HUONGVU
 DB_PORT=
-DB_DATABASE=giahue
+DB_DATABASE=db_giahue
 DB_USERNAME=sa
 DB_PASSWORD=12356789
 
