--- a/.env
+++ b/.env
@@ -3,11 +3,11 @@ APP_DEBUG=true
 APP_KEY=base64:S5snurcKrBn62SVSeNmdZ+mQnIn8uSr4rJkKdX/uDcs=
 
 DB_CONNECTION=sqlsrv
-DB_HOST= DESKTOP-N4TOFBT\HUONGVU
+DB_HOST= MINHTRAN\SQLEXPRESS
 DB_PORT=
 DB_DATABASE=db_giahue
 DB_USERNAME=sa
-DB_PASSWORD=12356789
+DB_PASSWORD=123456789Aa
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
