--- a/.env
+++ b/.env
@@ -1,13 +1,13 @@
 APP_ENV=local
-APP_DEBUG=false
-APP_KEY=base64:FJc9V+GqSic1ybrYeOsz8ICgF+6lf6Ij115/+CDCa4A=
+APP_DEBUG=true
+APP_KEY=base64:WW1RczfxPyY8w/rFdnQw20CPzDTuMWzaYvHDKmEAwbc=
 
 DB_CONNECTION=sqlsrv
-DB_HOST= 14.225.11.39
+DB_HOST= HUONGPM-PC
 DB_PORT=
-DB_DATABASE=csdlgia_haugiang
-DB_USERNAME=sa
-DB_PASSWORD=KpPGVN16gnty04pPGVN1604ftrHk
+DB_DATABASE=csdlgia_hue
+DB_USERNAME=
+DB_PASSWORD=
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
