--- a/.env
+++ b/.env
@@ -3,11 +3,11 @@ APP_DEBUG=true
 APP_KEY=base64:WW1RczfxPyY8w/rFdnQw20CPzDTuMWzaYvHDKmEAwbc=
 
 DB_CONNECTION=sqlsrv
-DB_HOST= HUONGPM-PC
+DB_HOST= 14.225.11.39
 DB_PORT=
-DB_DATABASE=csdlgia_hue
-DB_USERNAME=
-DB_PASSWORD=
+DB_DATABASE=csdlgia_haugiang
+DB_USERNAME=sa
+DB_PASSWORD=KpPGVN16gnty04pPGVN1604ftrHk
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
