--- a/.env
+++ b/.env
@@ -1,13 +1,13 @@
 APP_ENV=local
-APP_DEBUG=false
+APP_DEBUG=true
 APP_KEY=base64:OD5J3f21SCOcv1gklu5Eq+PEdTbcP/WWQN5lS35+H7g=
 
 DB_CONNECTION=sqlsrv
-DB_HOST= 14.225.11.39
+DB_HOST= 222.252.17.161
 DB_PORT=
 DB_DATABASE=csdlgia_haugiang
-DB_USERNAME=sa
-DB_PASSWORD=KpPGVN16gnty04pPGVN1604ftrHk
+DB_USERNAME=csdlgia_haugiang_u
+DB_PASSWORD=@pmcs123@!
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
