--- a/.env
+++ b/.env
@@ -9,6 +9,13 @@ DB_DATABASE=csdlgia_haugiang
 DB_USERNAME=csdlgia_haugiang_u
 DB_PASSWORD=@pmcs123@!
 
+# DB_CONNECTION=sqlsrv
+# DB_HOST= DESKTOP-NLJQJDG
+# DB_PORT=
+# DB_DATABASE=csdlgia_vungtau
+# DB_USERNAME=
+# DB_PASSWORD=
+
 CACHE_DRIVER=file
 SESSION_DRIVER=file
 QUEUE_DRIVER=syncf
