--- a/.env
+++ b/.env
@@ -2,12 +2,12 @@ APP_ENV=local
 APP_DEBUG=true
 APP_KEY=base64:OD5J3f21SCOcv1gklu5Eq+PEdTbcP/WWQN5lS35+H7g=
 
-DB_CONNECTION=sqlsrv
-DB_HOST= 14.248.85.58
-DB_PORT=
-DB_DATABASE=csdlgia_haugiang
-DB_USERNAME=csdlgia_haugiang_u
-DB_PASSWORD=@pmcs123@!
+# DB_CONNECTION=sqlsrv
+# DB_HOST= 14.248.85.58
+# DB_PORT=
+# DB_DATABASE=csdlgia_haugiang
+# DB_USERNAME=csdlgia_haugiang_u
+# DB_PASSWORD=@pmcs123@!
 
 # DB_CONNECTION=sqlsrv
 # DB_HOST= DESKTOP-NLJQJDG
@@ -16,12 +16,12 @@ DB_PASSWORD=@pmcs123@!
 # DB_USERNAME=
 # DB_PASSWORD=
 
-# DB_CONNECTION=sqlsrv
-# DB_HOST= 113.160.165.167
-# DB_PORT=
-# DB_DATABASE=csdlgia_caobang
-# DB_USERNAME=sa
-# DB_PASSWORD=@pmcs123@!
+DB_CONNECTION=sqlsrv
+DB_HOST= 113.160.165.87
+DB_PORT=
+DB_DATABASE=csdlgia_caobang
+DB_USERNAME=sa
+DB_PASSWORD=@pmcs123@!
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
